--- a/demo-MovieReviews-mturk.ipynb
+++ b/demo-MovieReviews-mturk.ipynb
@@ -51,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "NUM_RUNS = 30\n",
@@ -111,8 +109,8 @@
     "texts_test = read_texts(DATA_PATH+\"texts_test.txt\")\n",
     "targets_test = np.loadtxt(DATA_PATH+\"ratings_test.txt\")\n",
     "\n",
-    "print(\"Num. train texts: %d\" % len(texts_train))\n",
-    "print(\"Num. test texts:  %d\" % len(texts_test))"
+    "print((\"Num. train texts: %d\" % len(texts_train)))\n",
+    "print((\"Num. test texts:  %d\" % len(texts_test)))"
    ]
   },
   {
@@ -139,9 +137,9 @@
    "source": [
     "answers = pd.read_csv(DATA_PATH+\"answers.txt\", header=None, delimiter=\" \").as_matrix()\n",
     "answers = answers[:,:-1]\n",
-    "print(\"AMT answers matrix shape: %s\" % str(answers.shape))\n",
+    "print((\"AMT answers matrix shape: %s\" % str(answers.shape)))\n",
     "N_ANNOT = answers.shape[1]\n",
-    "print(\"Num. annotators: %d\" % N_ANNOT)"
+    "print((\"Num. annotators: %d\" % N_ANNOT))"
    ]
   },
   {
@@ -168,14 +166,14 @@
    "source": [
     "mean_target = np.mean(targets_train)\n",
     "std_target = np.std(targets_train)\n",
-    "print(\"Mean target: %.3f\" % mean_target)\n",
-    "print(\"Std. target: %.3f\" % std_target)\n",
+    "print((\"Mean target: %.3f\" % mean_target))\n",
+    "print((\"Std. target: %.3f\" % std_target))\n",
     "targets_train = (np.array(targets_train) - mean_target) / std_target\n",
     "targets_train_mean = (np.array(targets_train_mean) - mean_target) / std_target\n",
     "targets_train_ds = (np.array(targets_train_ds) - mean_target) / std_target\n",
     "targets_test = (np.array(targets_test) - mean_target) / std_target\n",
-    "for i in xrange(answers.shape[0]):\n",
-    "    for r in xrange(answers.shape[1]):\n",
+    "for i in range(answers.shape[0]):\n",
+    "    for r in range(answers.shape[1]):\n",
     "        if answers[i,r] != -1:\n",
     "            answers[i,r] = (answers[i,r] - mean_target) / std_target\n",
     "        else:\n",
@@ -236,12 +234,12 @@
     "sequences_test = tokenizer.texts_to_sequences(texts_test)\n",
     "\n",
     "word_index = tokenizer.word_index\n",
-    "print('Found %s unique tokens.' % len(word_index))\n",
+    "print(('Found %s unique tokens.' % len(word_index)))\n",
     "\n",
     "data_train = pad_sequences(sequences_train, maxlen=MAX_SEQUENCE_LENGTH)\n",
     "data_test = pad_sequences(sequences_test, maxlen=MAX_SEQUENCE_LENGTH)\n",
-    "print('Shape of train tensor:', data_train.shape)\n",
-    "print('Shape of test tensor:', data_test.shape)"
+    "print(('Shape of train tensor:', data_train.shape))\n",
+    "print(('Shape of test tensor:', data_test.shape))"
    ]
   },
   {
@@ -268,7 +266,7 @@
     "print('Preparing embedding matrix.')\n",
     "num_words = min(MAX_NB_WORDS, len(word_index))\n",
     "embedding_matrix = np.zeros((num_words, EMBEDDING_DIM))\n",
-    "for word, i in word_index.items():\n",
+    "for word, i in list(word_index.items()):\n",
     "    if i >= MAX_NB_WORDS:\n",
     "        continue\n",
     "    embedding_vector = embeddings_index.get(word)\n",
@@ -349,7 +347,7 @@
     "    predicted = model.predict(test_data)[:,0] * std_target + mean_target\n",
     "    trues = test_labels * std_target + mean_target\n",
     "    corr_test, mae_test, mse, rmse_test, r2_test = compute_error(trues, predicted)\n",
-    "    print(\"R2 Test:   %.3f\" % r2_test)\n",
+    "    print((\"R2 Test:   %.3f\" % r2_test))\n",
     "\n",
     "    return corr_test, mae_test, rmse_test, r2_test"
    ]
@@ -1154,21 +1152,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
