--- a/demo-conll-ner-mturk.ipynb
+++ b/demo-conll-ner-mturk.ipynb
@@ -88,7 +88,7 @@
     "    coefs = np.asarray(values[1:], dtype='float32')\n",
     "    embeddings_index[word] = coefs\n",
     "f.close()\n",
-    "print('Found %s word vectors' % len(embeddings_index))"
+    "print(('Found %s word vectors' % len(embeddings_index)))"
    ]
   },
   {
@@ -144,11 +144,11 @@
     "all_ground_truth = read_conll(DATA_PATH+'ground_truth.txt')\n",
     "all_test = read_conll(DATA_PATH+'testset.txt')\n",
     "all_docs = all_ground_truth + all_test\n",
-    "print \"Answers data size:\", len(all_answers)\n",
-    "print \"Majority voting data size:\", len(all_mv)\n",
-    "print \"Ground truth data size:\", len(all_ground_truth)\n",
-    "print \"Test data size:\", len(all_test)\n",
-    "print \"Total sequences:\", len(all_docs)"
+    "print(\"Answers data size:\", len(all_answers))\n",
+    "print(\"Majority voting data size:\", len(all_mv))\n",
+    "print(\"Ground truth data size:\", len(all_ground_truth))\n",
+    "print(\"Test data size:\", len(all_test))\n",
+    "print(\"Total sequences:\", len(all_docs))"
    ]
   },
   {
@@ -186,7 +186,7 @@
     "y_all = [[c[1] for c in y] for y in all_docs]\n",
     "\n",
     "N_ANNOT = len(y_answers[0][0])\n",
-    "print \"Num annnotators:\", N_ANNOT\n",
+    "print(\"Num annnotators:\", N_ANNOT)\n",
     "\n",
     "lengths = [len(x) for x in all_docs]\n",
     "all_text = [c for x in X_all for c in x]\n",
@@ -194,17 +194,17 @@
     "word2ind = {word: index for index, word in enumerate(words)}\n",
     "ind2word = {index: word for index, word in enumerate(words)}\n",
     "labels = list(set([c for x in y_all for c in x]))\n",
-    "print \"Labels:\", labels\n",
+    "print(\"Labels:\", labels)\n",
     "label2ind = {label: (index + 1) for index, label in enumerate(labels)}\n",
     "ind2label = {(index + 1): label for index, label in enumerate(labels)}\n",
     "ind2label[0] = \"O\" # padding index\n",
-    "print 'Input sequence length range: ', max(lengths), min(lengths)\n",
+    "print('Input sequence length range: ', max(lengths), min(lengths))\n",
     "\n",
     "max_label = max(label2ind.values()) + 1\n",
-    "print \"Max label:\", max_label\n",
+    "print(\"Max label:\", max_label)\n",
     "\n",
     "maxlen = max([len(x) for x in X_all])\n",
-    "print 'Maximum sequence length:', maxlen"
+    "print('Maximum sequence length:', maxlen)"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "source": [
     "num_words = len(word2ind)\n",
     "embedding_matrix = np.zeros((num_words, EMBEDDING_DIM))\n",
-    "for word, i in word2ind.items():\n",
+    "for word, i in list(word2ind.items()):\n",
     "    embedding_vector = embeddings_index.get(word)\n",
     "    if embedding_vector is not None:\n",
     "        # words not found in embedding index will be all-zeros.\n",
@@ -267,11 +267,11 @@
     "y_mv_enc = [[encode(c, max_label) for c in ey] for ey in y_mv_enc]\n",
     "\n",
     "y_answers_enc = []\n",
-    "for r in xrange(N_ANNOT):\n",
+    "for r in range(N_ANNOT):\n",
     "    annot_answers = []\n",
-    "    for i in xrange(len(y_answers)):\n",
+    "    for i in range(len(y_answers)):\n",
     "        seq = []\n",
-    "        for j in xrange(len(y_answers[i])):\n",
+    "        for j in range(len(y_answers[i])):\n",
     "            #enc = -1*np.ones(max_label)\n",
     "            enc = -1\n",
     "            if y_answers[i][j][r] != \"?\":\n",
@@ -316,7 +316,7 @@
     "y_test_enc = pad_sequences(y_test_enc, maxlen=maxlen)\n",
     "\n",
     "y_answers_enc_padded = []\n",
-    "for r in xrange(N_ANNOT):\n",
+    "for r in range(N_ANNOT):\n",
     "    padded_answers = pad_sequences(y_answers_enc[r], maxlen=maxlen)\n",
     "    y_answers_enc_padded.append(padded_answers)\n",
     "\n",
@@ -326,13 +326,13 @@
     "n_train = len(X_train_enc)\n",
     "n_test = len(X_test_enc)\n",
     "\n",
-    "print 'Training and testing tensor shapes:'\n",
-    "print X_train_enc.shape, X_test_enc.shape, y_ground_truth_enc.shape, y_test_enc.shape\n",
+    "print('Training and testing tensor shapes:')\n",
+    "print(X_train_enc.shape, X_test_enc.shape, y_ground_truth_enc.shape, y_test_enc.shape)\n",
     "\n",
-    "print \"Answers shape:\", y_answers_enc.shape\n",
+    "print(\"Answers shape:\", y_answers_enc.shape)\n",
     "\n",
     "N_CLASSES = len(label2ind) + 1\n",
-    "print \"Num classes:\", N_CLASSES"
+    "print(\"Num classes:\", N_CLASSES)"
    ]
   },
   {
@@ -397,19 +397,19 @@
     "\n",
     "    yh = y_test_enc.argmax(2)\n",
     "    fyh, fpr = score(yh, pr_test)\n",
-    "    print 'Testing accuracy:', accuracy_score(fyh, fpr)\n",
-    "    print 'Testing confusion matrix:'\n",
-    "    print confusion_matrix(fyh, fpr)\n",
+    "    print('Testing accuracy:', accuracy_score(fyh, fpr))\n",
+    "    print('Testing confusion matrix:')\n",
+    "    print(confusion_matrix(fyh, fpr))\n",
     "\n",
     "    preds_test = []\n",
-    "    for i in xrange(len(pr_test)):\n",
+    "    for i in range(len(pr_test)):\n",
     "        row = pr_test[i][-len(y_test[i]):]\n",
     "        row[np.where(row == 0)] = 1\n",
     "        preds_test.append(row)\n",
-    "    preds_test = [ list(map(lambda x: ind2label[x], y)) for y in preds_test]\n",
+    "    preds_test = [ list([ind2label[x] for x in y]) for y in preds_test]\n",
     "\n",
     "    results_test = conlleval(preds_test, y_test, X_test, 'r_test.txt')\n",
-    "    print \"Results for testset:\", results_test\n",
+    "    print(\"Results for testset:\", results_test)\n",
     "\n",
     "    return results_test"
    ]
@@ -791,8 +791,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
