--- a/demo-dogs-vs-cats-sim.ipynb
+++ b/demo-dogs-vs-cats-sim.ipynb
@@ -9,17 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "1.10.0\n"
      ]
     }
    ],
+   "source": [
+    "import tensorflow\n",
+    "print(tensorflow.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -51,10 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "DATA_PATH = \"/home/fmpr/datasets/deep-crowds-datasets/dogs_vs_cats_sim/prepared/\"\n",
@@ -114,36 +122,36 @@
     }
    ],
    "source": [
-    "print \"\\nLoading train data...\"\n",
+    "print(\"\\nLoading train data...\")\n",
     "\n",
     "data_train = load_data(DATA_PATH+\"data_train.npy\")\n",
-    "print data_train.shape\n",
+    "print(data_train.shape)\n",
     "\n",
     "labels_train = load_data(DATA_PATH+\"labels_train.npy\")\n",
-    "print labels_train.shape\n",
+    "print(labels_train.shape)\n",
     "\n",
     "labels_train_mv = load_data(DATA_PATH+\"labels_train_mv.npy\")\n",
-    "print labels_train_mv.shape\n",
+    "print(labels_train_mv.shape)\n",
     "\n",
     "labels_train_ds = pd.read_csv(DATA_PATH+\"labels_train_DS.txt\", header=None).as_matrix()[:,0]\n",
-    "print labels_train_ds.shape\n",
+    "print(labels_train_ds.shape)\n",
     "\n",
     "# data from Amazon Mechanical Turk\n",
-    "print \"\\nLoading AMT data...\"\n",
+    "print(\"\\nLoading AMT data...\")\n",
     "answers = load_data(DATA_PATH+\"labels_train_sim.npy\")\n",
-    "print answers.shape\n",
+    "print(answers.shape)\n",
     "N_ANNOT = answers.shape[1]\n",
-    "print \"\\nN_CLASSES:\", N_CLASSES\n",
-    "print \"N_ANNOT:\", N_ANNOT\n",
+    "print(\"\\nN_CLASSES:\", N_CLASSES)\n",
+    "print(\"N_ANNOT:\", N_ANNOT)\n",
     "\n",
     "# load test data\n",
-    "print \"\\nLoading test data...\"\n",
+    "print(\"\\nLoading test data...\")\n",
     "\n",
     "data_test = load_data(DATA_PATH+\"data_test.npy\")\n",
-    "print data_test.shape\n",
+    "print(data_test.shape)\n",
     "\n",
     "labels_test = load_data(DATA_PATH+\"labels_test.npy\")\n",
-    "print labels_test.shape"
+    "print(labels_test.shape)"
    ]
   },
   {
@@ -196,15 +204,15 @@
     }
    ],
    "source": [
-    "print \"\\nConverting to one-hot encoding...\"\n",
+    "print(\"\\nConverting to one-hot encoding...\")\n",
     "labels_train_bin = one_hot(labels_train, N_CLASSES)\n",
-    "print labels_train_bin.shape\n",
+    "print(labels_train_bin.shape)\n",
     "labels_train_mv_bin = one_hot(labels_train_mv, N_CLASSES)\n",
-    "print labels_train_mv_bin.shape\n",
+    "print(labels_train_mv_bin.shape)\n",
     "labels_train_ds_bin = one_hot(labels_train_ds, N_CLASSES)\n",
-    "print labels_train_ds_bin.shape\n",
+    "print(labels_train_ds_bin.shape)\n",
     "labels_test_bin = one_hot(labels_test, N_CLASSES)\n",
-    "print labels_test_bin.shape\n",
+    "print(labels_test_bin.shape)\n",
     "\n",
     "answers_bin_missings = []\n",
     "for i in range(len(answers)):\n",
@@ -401,7 +409,7 @@
    ],
    "source": [
     "accuracy_test = eval_model(model, data_test, labels_test)\n",
-    "print \"Accuracy: Test: %.3f\" % (accuracy_test,) "
+    "print(\"Accuracy: Test: %.3f\" % (accuracy_test,)) "
    ]
   },
   {
@@ -515,7 +523,7 @@
    ],
    "source": [
     "accuracy_test = eval_model(model, data_test, labels_test)\n",
-    "print \"Accuracy: Test: %.3f\" % (accuracy_test,) "
+    "print(\"Accuracy: Test: %.3f\" % (accuracy_test,)) "
    ]
   },
   {
@@ -631,7 +639,7 @@
    ],
    "source": [
     "accuracy_test = eval_model(model, data_test, labels_test)\n",
-    "print \"Accuracy: Test: %.3f\" % (accuracy_test,) "
+    "print(\"Accuracy: Test: %.3f\" % (accuracy_test,)) "
    ]
   },
   {
@@ -810,12 +818,12 @@
    "source": [
     "model = build_base_model()\n",
     "crowds_agg = CrowdsCategoricalAggregator(model, data_train, answers, batch_size=BATCH_SIZE)\n",
-    "for epoch in xrange(N_EPOCHS):\n",
-    "    print \"Epoch:\", epoch+1\n",
+    "for epoch in range(N_EPOCHS):\n",
+    "    print(\"Epoch:\", epoch+1)\n",
     "    \n",
     "    # E-step\n",
     "    ground_truth_est = crowds_agg.e_step()\n",
-    "    print \"Adjusted ground truth accuracy:\", 1.0*np.sum(np.argmax(ground_truth_est, axis=1) == labels_train) / len(labels_train)\n",
+    "    print(\"Adjusted ground truth accuracy:\", 1.0*np.sum(np.argmax(ground_truth_est, axis=1) == labels_train) / len(labels_train))\n",
     "    \n",
     "    # M-step\n",
     "    model, pi = crowds_agg.m_step()"
@@ -836,7 +844,7 @@
    ],
    "source": [
     "accuracy_test = eval_model(model, data_test, labels_test)\n",
-    "print \"Accuracy: Test: %.3f\" % (accuracy_test,) "
+    "print(\"Accuracy: Test: %.3f\" % (accuracy_test,)) "
    ]
   },
   {
@@ -977,7 +985,7 @@
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "accuracy_test = eval_model(model, data_test, labels_test)\n",
-    "print \"Accuracy: Test: %.3f\" % (accuracy_test,) "
+    "print(\"Accuracy: Test: %.3f\" % (accuracy_test,)) "
    ]
   },
   {
@@ -999,14 +1007,14 @@
    "source": [
     "conf_mats = np.zeros((N_CLASSES,N_CLASSES,N_ANNOT)) + 0.00000001\n",
     "num_answers = np.zeros((N_CLASSES,N_ANNOT)) + (0.00000001 * N_CLASSES)\n",
-    "for i in xrange(len(answers)):\n",
-    "    for r in xrange(N_ANNOT):\n",
+    "for i in range(len(answers)):\n",
+    "    for r in range(N_ANNOT):\n",
     "        if answers[i][r] != -1:\n",
     "            num_answers[labels_train[i],r] += 1\n",
     "            conf_mats[labels_train[i],answers[i][r],r] += 1\n",
-    "for r in xrange(N_ANNOT):\n",
-    "    for c in xrange(N_CLASSES):\n",
-    "        for c2 in xrange(N_CLASSES):\n",
+    "for r in range(N_ANNOT):\n",
+    "    for c in range(N_CLASSES):\n",
+    "        for c2 in range(N_CLASSES):\n",
     "            conf_mats[c,c2,r] = conf_mats[c,c2,r] / num_answers[c,r]"
    ]
   },
@@ -1024,7 +1032,7 @@
     }
    ],
    "source": [
-    "print \"True values for sensitivity:\", conf_mats[1,1,:]"
+    "print(\"True values for sensitivity:\", conf_mats[1,1,:])"
    ]
   },
   {
@@ -1041,7 +1049,7 @@
     }
    ],
    "source": [
-    "print \"Learned weights for sensitivity:\", weights[0][1,1,:]"
+    "print(\"Learned weights for sensitivity:\", weights[0][1,1,:])"
    ]
   },
   {
@@ -1072,7 +1080,7 @@
     "plt.rc('text', usetex=True)\n",
     "#plt.rc('font', family='serif')\n",
     "slope, intercept, r_value, p_value, std_err = scipy.stats.linregress(conf_mats[1,1,:], weights[0][1,1,:])\n",
-    "print slope, intercept\n",
+    "print(slope, intercept)\n",
     "plt.scatter(conf_mats[1,1,:], weights[0][1,1,:], s=40)\n",
     "x = np.arange(0.05, 0.95, 0.01)\n",
     "plt.plot(x, slope*x + intercept, 'b-')\n",
@@ -1098,7 +1106,7 @@
     }
    ],
    "source": [
-    "print \"True values for specificity:\", conf_mats[0,0,:]"
+    "print(\"True values for specificity:\", conf_mats[0,0,:])"
    ]
   },
   {
@@ -1115,7 +1123,7 @@
     }
    ],
    "source": [
-    "print \"Learned weights for specificity:\", weights[0][0,0,:]"
+    "print(\"Learned weights for specificity:\", weights[0][0,0,:])"
    ]
   },
   {
@@ -1144,7 +1152,7 @@
    "source": [
     "plt.style.use('ggplot')\n",
     "slope, intercept, r_value, p_value, std_err = scipy.stats.linregress(conf_mats[0,0,:], weights[0][0,0,:])\n",
-    "print slope, intercept\n",
+    "print(slope, intercept)\n",
     "plt.scatter(conf_mats[0,0,:], weights[0][0,0,:], s=40)\n",
     "x = np.arange(0.05, 0.95, 0.01)\n",
     "plt.plot(x, slope*x + intercept, 'b-')\n",
@@ -1175,21 +1183,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
